--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,5 +10,9 @@ clone_depth: 10
 build:
   project: openthread.sln
   verbosity: minimal
+after_build:
+ - cmd: %cd%
+ - cmd: dir build\bin\%Platform%\%Configuration%\dll\
+
 test:
   assemblies: build\bin\$(Platform)\$(Configuration)\dll\UnitTests.dll
